feat: inizio creazione testata

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Discord</title>
 </head>
+
 <body>
-    <header></header>
+    <header class="header ">
+        <div class="flex-container menu">
+            <a href="">logo</a>
+            <ul class="link">
+                <li>link</li>
+                <li>link</li>
+                <li>link</li>
+            </ul>
+            <a href="">Login</a>
+        </div>
+    </header>
 
     <main>
         <!-- HERO SECTION -->
@@ -15,31 +27,32 @@
         <!-- /HERO SECTION -->
 
         <!-- Text-img section -->
-         <section></section>
+        <section></section>
         <!-- /Text-img section -->
 
         <!-- Text-img section -->
-         <section></section>
+        <section></section>
         <!-- /Text-img section -->
 
         <!-- Text-img section -->
-         <section></section>
+        <section></section>
         <!-- /Text-img section -->
 
         <!-- CTA section-->
-         <section></section>
+        <section></section>
         <!-- /CTA section -->
     </main>
 
     <footer>
         <!-- footer top -->
-         <div></div>
+        <div></div>
         <!-- /footer top -->
 
         <!-- footer bottom -->
-         <div></div>
+        <div></div>
         <!-- /footer bottom -->
     </footer>
 
 </body>
+
 </html>
