feat: completato sezione hero

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
     <main>
         <!-- HERO SECTION -->
-        <section></section>
+        <section class="hero">
+            <div class="hero-content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente voluptatum voluptates nostrum rerum ratione aliquid temporibus! Ipsa explicabo voluptatibus corrupti voluptatum inventore vel? Dignissimos veritatis delectus ipsam saepe accusantium.
+
+            </div>
+        </section>
         <!-- /HERO SECTION -->
 
         <!-- Text-img section -->
